console  site 생성 부분 및 domain 정보 수정

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/roles/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/roles/view.html
@@ -49,7 +49,7 @@
 				 			<strong>설명</strong>
 				 		</p>
 						<p>
-							{{domains.description}}
+							<textarea rows="5" ng-bind-html="domains.description" style="width:95%;border:0px;" readonly="true"></textarea>
 						</p>
 					</md-list-item>
 				</md-list>
