--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/view.html
@@ -14,7 +14,7 @@
 
 <md-content class="content-container content">
 	<h3 layout-padding="" class="md-headline">
-		사이트 및 메뉴
+		사이트 및 메뉴 
 		<span class="md-subhead text-muted">사이트 정보</span>
 	</h3>
 	
@@ -76,7 +76,8 @@
 			sort-items="{
 				menuGroupId: 'menuGroupId',
 				name: '이름'
-			}">
+			}"
+			search-info="searchInfo">
 			
 			<cm-search-list-filters>
 				<md-card-content class="content" layout="column">
