--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/base.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/base.html
@@ -23,6 +23,7 @@
 <script src="/webjars/angular-messages/1.5.0-rc.0/angular-messages.min.js" type="text/javascript"></script>
 <script src="/webjars/angular-material/1.0.6/angular-material.min.js" type="text/javascript"></script>
 <script src="/webjars/angular-ui-router/0.2.15/release/angular-ui-router.min.js" type="text/javascript"></script>
+
 <!-- <script src="/webjars/angular-material-data-table/0.9.8/dist/md-data-table.min.js" type="text/javascript"></script> -->
 <!-- <script type="text/javascript" src="/webjars/angular-ui-bootstrap-bower/0.14.3/ui-bootstrap.min.js"></script>
 <script type="text/javascript" src="/webjars/angular-ui-bootstrap-bower/0.14.3/ui-bootstrap-tpls.min.js"></script> -->
@@ -31,6 +32,7 @@
 <script type="text/javascript" src="/webjars/angular-ui-bootstrap/1.2.4/src/pagination/pagination.js"></script>
 <script type="text/javascript" src="/webjars/angular-ui-bootstrap/1.2.4/src/pager/pager.js"></script>
 
+<script src="/webjars/angular-sanitize/1.5.0-rc.1/angular-sanitize.min.js" type="text/javascript"></script>
 
 </head>
 <body layout:fragment="body">
