코드 정리 서버로 요청을 날리면 응답 받을때까지 모든 버튼이 비활성화되도록 처리..

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/create.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/create.html
@@ -11,7 +11,7 @@
 			</md-button> -->
 			
 			<span flex=""></span>
-			<md-button class="md-raised" ng-click="create(form, $event)">생성</md-button>
+			<md-button class="md-raised" ng-disabled="isProcess" ng-click="create(form, $event)">생성</md-button>
 			
 		</div>
 	</md-toolbar>
