site 수정 개발완료. site 기본 메뉴 설정 개발 중.
기타 수정사항 적용
ui-router url 변경 등

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/email.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/email.html
@@ -42,7 +42,7 @@ angular.module('cinnamon')
 		controller: 'configuration.email.server.view'
 	})
 	.state('modify', {
-		url : '/configuration/email/server/modify/:emailServerId',
+		url : '/configuration/email/server/:emailServerId/modify',
 		templateUrl : '/configuration/partials/email/modify',
 		controller : 'configuration.email.server.modify'
 	})
