--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/roles/modify.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/roles/modify.html
@@ -13,7 +13,7 @@
 				<form name="frm" novalidate="novalidate">
 					<md-input-container class="md-block">
 						<label>permissionId</label>
-						<input required="required" name="permissionId" ng-model="role.permissionId" disabled="true" />
+						<input required="required" name="permissionId" ng-model="role.permissionId" disabled="true" style="font-weight: bold;" />
 					</md-input-container>
 
 					<md-input-container class="md-block">
