팝업 템플릿 디렉티브 개발중 (사용자 정보 수정 팝업) 2댑스 메뉴를 해더에 표시하기 위해 수정 진행중

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/default.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/default.html
@@ -75,6 +75,14 @@
 			</md-menu>
 		</div>
 		
+		<div class="md-primary md-hue-1"  layout-fill="">
+			<md-tabs class="md-primary md-hue-1" md-center-tabs="true">
+				<md-tab label="Tab #1"></md-tab>
+				<md-tab label="Tab #2"></md-tab>
+				<md-tab label="Tab #3"></md-tab>
+			</md-tabs>
+		</div>
+		
 	</md-toolbar>
 	
 	<md-sidenav md-component-id="leftSidenav">
