--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/menuGroups/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/menuGroups/view.html
@@ -1,11 +1,11 @@
 <md-fab-speed-dial md-open="fabOpen" md-direction="up" class="md-fab-bottom-right md-scale"  style="position: fixed">
 	<md-fab-trigger>
 		<md-button class="md-fab md-accent">
-			<md-icon>edit</md-icon>
+			<md-icon>add</md-icon>
 		</md-button>
 	</md-fab-trigger>
 	<md-fab-actions>
-		<md-button class="md-fab md-accent md-raised md-mini" ng-click="selectMenuGroup($event)">
+		<md-button class="md-fab md-accent md-raised md-mini" ng-click="openCreateMenu()">
 			<md-tooltip md-direction="left">메뉴 생성</md-tooltip>
 			<md-icon>menu</md-icon>
 		</md-button>
@@ -47,8 +47,8 @@
 				<tr>
 					<th>사이트</th>
 					<td class="text-muted">
-						{{domain.site.name}}
-						<md-button class="md-raised md-primary" ng-click="selectSite($event)">사이트 선택</md-button>
+						{{sites.name}}
+						<md-button class="md-raised md-primary" ng-click="openSiteList()">사이트 선택</md-button>
 					</td>
 				</tr>
 				<!-- <tr>
