--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/modify.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/modify.html
@@ -44,7 +44,7 @@
 			</md-content>
 			
 			<md-card-actions layout="row">
-				<md-button ng-click="goList()">취소</md-button>
+				<md-button ng-click="goView()">취소</md-button>
 				<md-button class="md-raised md-primary" type="sumbit" ng-click="modify()" ng-disabled="!frm.$valid">수정</md-button>
 			</md-card-actions>
 		</md-card>
