--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/base.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/base.html
@@ -31,6 +31,7 @@
 <script type="text/javascript" src="/webjars/angular-ui-bootstrap/1.2.4/src/paging/paging.js"></script>
 <script type="text/javascript" src="/webjars/angular-ui-bootstrap/1.2.4/src/pagination/pagination.js"></script>
 <script type="text/javascript" src="/webjars/angular-ui-bootstrap/1.2.4/src/pager/pager.js"></script>
+<script type="text/javascript" src="/webjars/angular-ui-bootstrap/1.2.4/src/tabs/tabs.js"></script>
 
 <script src="/webjars/angular-sanitize/1.5.0-rc.1/angular-sanitize.min.js" type="text/javascript"></script>
 
