--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/email/servers/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/email/servers/list.html
@@ -1,5 +1,3 @@
-<div class="content-container" ng-controller="configuration.email.list" ng-cloak="">
-
 <md-fab-speed-dial md-open="fabOpen" class="md-fab-bottom-right md-scale" style="position: fixed">
 	<md-fab-trigger>
 		<md-button class="md-fab" ui-sref="create" ng-show="showCreateBtn == 'server'">
@@ -14,15 +12,17 @@
 	</md-fab-trigger>
 </md-fab-speed-dial>
 
+<div class="content-container">
+
 	<h3 layout-padding="" class="md-headline">
 		이메일
 		<span class="md-subhead text-muted">서버 목록</span>
 	</h3>
 	<md-card md-whiteframe="4">
-		<md-content >
+		<!-- <md-content >
 		<md-tabs md-dynamic-height="" md-border-bottom="">
 		
-			<md-tab label="서버" ng-click="showCreateBtn = 'server'">
+			<md-tab label="서버" ng-click="showCreateBtn = 'server'"> -->
 				
 				<!-- 상세 검색 시작 -->
 					<cm-search-list
@@ -51,10 +51,22 @@
 						<!-- 리스트-->
 						<cm-search-list-items>
 							<md-list-item ng-repeat="domain in domains.content" class="secondary-button-padding" ng-click="goView(domain)">
-								<p class="" >{{ domain.name }} </p>
+								<div flex="5" class="text-muted">
+									{{domain.emailServerId}}
+								</div>
+								<b flex="30">{{domain.name}}</b>
+								<div flex="30" class="text-muted">{{domain.address}}</div>
+								<div flex="30" class="text-muted">{{domain.fromAddress}}</div>
+								
+								<!-- <p class="" >{{ domain.name }} </p>
 								<p class="" >{{ domain.address }} </p>
-								<p class="" >{{ domain.fromAddress }} </p>
-								<md-button ng-class="{ 'md-primary' : domain.defaultServer}" class="md-secondary md-icon-button" ng-click="setDefaultEmailServer(domain)">
+								<p class="" >{{ domain.fromAddress }} </p> -->
+								<md-button
+									ng-class="{ 'md-primary' : domain.defaultServer}"
+									class="md-secondary md-icon-button"
+									ng-click="setDefaultEmailServer(domain)">
+									
+									<md-tooltip>기본 이메일 서버</md-tooltip>
 									<i class="material-icons">check</i>	
 								</md-button>
 								
@@ -64,7 +76,7 @@
 						<!-- 리스트끝-->
 					</cm-search-list>
 				
-			</md-tab>
+			<!-- </md-tab>
 			
 			<md-tab label="템플릿" ng-click="showCreateBtn = 'template'">
 			<md-content class="md-padding">
@@ -75,7 +87,7 @@
 			</md-tab>
 		</md-tabs>
 		
-		</md-content>
+		</md-content> -->
 	</md-card>
 </div>
 
