--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/base.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/base.html
@@ -17,10 +17,11 @@
 <link href="/webjars/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
 <!-- <link href="/webjars/angular-material-data-table/0.9.8/dist/md-data-table.min.css" rel="stylesheet" type="text/css" /> -->
 
-<script src="/webjars/angular/1.5.0-rc.1/angular.min.js" type="text/javascript"></script>
-<script src="/webjars/angular-animate/1.5.0-rc.1/angular-animate.min.js" type="text/javascript"></script>
-<script src="/webjars/angular-aria/1.5.0-rc.1/angular-aria.min.js" type="text/javascript"></script>
-<script src="/webjars/angular-messages/1.5.0-rc.0/angular-messages.min.js" type="text/javascript"></script>
+<script src="/webjars/angular/1.5.2/angular.min.js" type="text/javascript"></script>
+<script src="/webjars/angular-animate/1.5.2/angular-animate.min.js" type="text/javascript"></script>
+<script src="/webjars/angular-aria/1.5.2/angular-aria.min.js" type="text/javascript"></script>
+<script src="/webjars/angular-messages/1.5.1/angular-messages.min.js" type="text/javascript"></script>
+<script src="/webjars/angular-sanitize/1.5.2/angular-sanitize.min.js" type="text/javascript"></script>
 <script src="/webjars/angular-material/1.0.6/angular-material.min.js" type="text/javascript"></script>
 <script src="/webjars/angular-ui-router/0.2.15/release/angular-ui-router.min.js" type="text/javascript"></script>
 
@@ -31,9 +32,7 @@
 <script type="text/javascript" src="/webjars/angular-ui-bootstrap/1.2.4/src/paging/paging.js"></script>
 <script type="text/javascript" src="/webjars/angular-ui-bootstrap/1.2.4/src/pagination/pagination.js"></script>
 <script type="text/javascript" src="/webjars/angular-ui-bootstrap/1.2.4/src/pager/pager.js"></script>
-<script type="text/javascript" src="/webjars/angular-ui-bootstrap/1.2.4/src/tabs/tabs.js"></script>
 
-<script src="/webjars/angular-sanitize/1.5.0-rc.1/angular-sanitize.min.js" type="text/javascript"></script>
 
 </head>
 <body layout:fragment="body">
