서버초기화 화면 ui 정리 불필요한 파일 정리

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/view.html
@@ -30,7 +30,7 @@
 			</md-button>
 		</md-card-title>
 		
-		<md-card-content>
+		<!-- <md-card-content> -->
 			<table class="table table-hover">
 				<tr>
 					<th class="text-muted">userId</th>
@@ -71,7 +71,7 @@
 					</td>
 				</tr>
 			</table>
-		</md-card-content>
+		<!-- </md-card-content> -->
 		
 	</md-card>
 	
