--- a/cinnamon-core-web-material/src/main/resources/static/css/cinnamon.css
+++ b/cinnamon-core-web-material/src/main/resources/static/css/cinnamon.css
@@ -65,3 +65,10 @@
 .cm-pagination > .cm-page {
 	margin: 0 0 0 0
 }
+
+.drop-box {
+	border:3px dashed lightgray
+}
+.dragover {
+	border: 4px solid gray
+}
