--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/directives/searchList.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/directives/searchList.html
@@ -6,7 +6,7 @@
 <div ng-clock="">
 	
 	<!-- 상세검색 헤더 -->
-	<md-progress-linear ng-if="showProgress" md-mode="indeterminate"></md-progress-linear>
+	<!-- <md-progress-linear ng-if="showProgress" md-mode="indeterminate"></md-progress-linear> -->
 	<md-content layout-padding="" layout="row" layout-align="center center">
 		<md-input-container class="md-icon-float" flex="">
 			<!-- <md-icon>search</md-icon> -->
