--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/base.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/base.html
@@ -24,6 +24,7 @@
 <script src="/webjars/angular-sanitize/1.5.2/angular-sanitize.min.js" type="text/javascript"></script>
 <script src="/webjars/angular-material/1.0.6/angular-material.min.js" type="text/javascript"></script>
 <script src="/webjars/angular-ui-router/0.2.15/release/angular-ui-router.min.js" type="text/javascript"></script>
+<script src="/webjars/ng-file-upload/12.0.4/ng-file-upload.min.js" type="text/javascript"></script>
 
 <!-- <script src="/webjars/angular-material-data-table/0.9.8/dist/md-data-table.min.js" type="text/javascript"></script> -->
 <!-- <script type="text/javascript" src="/webjars/angular-ui-bootstrap-bower/0.14.3/ui-bootstrap.min.js"></script>
