코드 정리, 불필요한 디펜던시 제거
json 응답 데이터의 날짜 포맷 일괄 지정,
json 응답시 하이버네이트 lazy load 되는 객체 일기 오류발생하는 문제 해결

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/default.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/default.html
@@ -38,7 +38,7 @@
 				</md-button>
 				<md-menu-content>
 					<md-menu-item>
-						<md-button>
+						<md-button ng-href="/" target="_self">
 							<md-icon>account_circle</md-icon> 프로필
 						</md-button>
 					</md-menu-item>
