--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/list.html
@@ -42,11 +42,11 @@
 			<cm-search-list-items>
 				<md-list-item ng-repeat="domain in domains.content" ng-click="goView(domain)">
 					
-					<div flex="5" class="text-muted">
+					<div flex="10" class="text-muted">
 						{{domain.userGroupId}}
 					</div>
 					<b flex="50">{{domain.name}}</b>
-					<span flex="45" class="text-muted">{{domain.authority.name}}</span>
+					<span flex="45" class="text-muted">{{domain.permission.name}}</span>
 					
 					<md-divider ng-if="!$last"></md-divider>
 				</md-list-item>
