회원가입 페이지 개발중 운영자가 직접 회원 생성할때 등록자(creator)를 저장하도록 수정

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/initWizard.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/initWizard.html
@@ -7,7 +7,7 @@
 	layout:decorator="configuration/layout/base">
 
 <head>
-<title>cnnnamon 초기화</title>
+<title>cinnamon 초기화</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link href="/css/cinnamon.css" rel="stylesheet" type="text/css" />
 
