--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/list.html
@@ -25,15 +25,15 @@
 			
 			<cm-search-list-filters>
 				<md-card-content class="content" layout="column">
-					<md-input-container layout-fill="">
+					<md-input-container>
 						<label>이름</label>
 						<input ng-model="searchInfo.name" />
 					</md-input-container>
-					<md-input-container layout-fill="">
+					<md-input-container>
 						<label>userId</label>
 						<input ng-model="searchInfo.userId" />
 					</md-input-container>
-					<md-input-container layout-fill="">
+					<md-input-container>
 						<label>이메일</label>
 						<input ng-model="searchInfo.email" />
 					</md-input-container>
