--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/login.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/login.html
@@ -7,7 +7,7 @@
 	layout:decorator="configuration/layout/base">
 
 <head>
-<title>로그인</title>
+<title>cinnamon 로그인</title>
 <link href="/css/cinnamon.css" rel="stylesheet" type="text/css" />
 
 <script type="text/javascript" src="/js/cinnamon.js"></script>
@@ -50,11 +50,11 @@ angular.module('cinnamon');
 				</md-card-content>
 				<md-card-actions>
 					<md-button type="submit" class="md-raised md-primary">로그인</md-button>
-					<!-- <md-button>회원가입</md-button>
-					<md-button>비밀번호 변경</md-button> -->
+					<md-button ng-href="/join">회원가입</md-button>
 				</md-card-actions>
 			</md-card>
 		</form>
+		
 	</md-content>
 </body>
 </html>
