--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/view.html
@@ -83,15 +83,15 @@
 			
 			<cm-search-list-filters>
 				<md-card-content class="content" layout="column">
-					<md-input-container layout-fill="">
+					<md-input-container>
 						<label>이름</label>
 						<input />
 					</md-input-container>
-					<md-input-container layout-fill="">
+					<md-input-container>
 						<label>userId</label>
 						<input />
 					</md-input-container>
-					<md-input-container layout-fill="">
+					<md-input-container>
 						<label>이메일</label>
 						<input />
 					</md-input-container>
