--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/base.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/base.html
@@ -12,9 +12,11 @@
 <meta name="_csrf_header" th:content="${_csrf.headerName}" th:if="${_csrf != null}" />
 
 <link href="/webjars/bootstrap/3.3.6/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-<link href="/webjars/angular-material/1.0.6/angular-material.css" rel="stylesheet" type="text/css" />
+<link href="/webjars/angular-material/1.1.0-rc1/angular-material.css" rel="stylesheet" type="text/css" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css" />
 <link href="/webjars/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+<link href="https://cdn.rawgit.com/alenaksu/mdPickers/0.7.2/dist/mdPickers.min.css" rel="stylesheet" type="text/css" />
+
 <!-- <link href="/webjars/angular-material-data-table/0.9.8/dist/md-data-table.min.css" rel="stylesheet" type="text/css" /> -->
 
 <script src="/webjars/angular/1.5.2/angular.min.js" type="text/javascript"></script>
@@ -22,7 +24,7 @@
 <script src="/webjars/angular-aria/1.5.2/angular-aria.min.js" type="text/javascript"></script>
 <script src="/webjars/angular-messages/1.5.1/angular-messages.min.js" type="text/javascript"></script>
 <script src="/webjars/angular-sanitize/1.5.2/angular-sanitize.min.js" type="text/javascript"></script>
-<script src="/webjars/angular-material/1.0.6/angular-material.min.js" type="text/javascript"></script>
+<script src="/webjars/angular-material/1.1.0-rc1/angular-material.min.js" type="text/javascript"></script>
 <script src="/webjars/angular-ui-router/0.2.15/release/angular-ui-router.min.js" type="text/javascript"></script>
 <script src="/webjars/ng-file-upload/12.0.4/ng-file-upload.min.js" type="text/javascript"></script>
 
@@ -34,6 +36,10 @@
 <script type="text/javascript" src="/webjars/angular-ui-bootstrap/1.2.4/src/pagination/pagination.js"></script>
 <script type="text/javascript" src="/webjars/angular-ui-bootstrap/1.2.4/src/pager/pager.js"></script>
 
+<!-- <script type="text/javascript" src="/webjars/momentjs/2.12.0/moment.js"></script>  -->
+<!-- <script type="text/javascript" src="/webjars/mdPickers/0.5.2/src/mdPickers.js"></script>  -->
+<script type="text/javascript" src="/webjars/momentjs/2.12.0/moment.js"></script>
+<script type="text/javascript" src="https://cdn.rawgit.com/alenaksu/mdPickers/0.7.2/dist/mdPickers.min.js"></script>
 
 </head>
 <body layout:fragment="body">
