json 파싱시 클라이언트 서버간 파라미터 가 틀릴경우 에러발생하는 문제 수정 applicationApns applicationGcm 도메인 객체 추가 (푸시 보내기 관련하여 향후 사용예정)

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/modify.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/modify.html
@@ -27,7 +27,7 @@
 				</md-input-container>
 				<md-input-container class="md-block">
 					<label>URL</label>
-						<input required="required" name="url" ng-model="site.url" md-maxlength="200" />
+						<input name="url" ng-model="site.url" md-maxlength="200" />
 						<div ng-messages="frm.url.$error ">
 						<div ng-message="required">url을 입력하세요.</div>
 						<div ng-message="md-maxlength">200자 이상 입력하실 수 없습니다.</div>
