--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/email/servers/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/email/servers/view.html
@@ -5,19 +5,21 @@
 		<span class="md-subhead text-muted">서버 상세내용</span>
 	</h3>
 	<md-card md-whiteframe="4" layout-padding="">
-		<md-card-header>
-			<md-card-header-text>
+	
+		<md-card-title>
+			<md-card-title-text>
 				<span class="md-title">기본정보</span>
-			</md-card-header-text>
+			</md-card-title-text>
 			<md-button class="md-icon-button" ui-sref="modify({emailServerId: domains.emailServerId})">
 				<md-tooltip>기본 정보 수정</md-tooltip>
 				<md-icon>edit</md-icon>
 			</md-button>
-			<md-btton class="md-icon-button" ng-click="delete(domains.emailServerId)">
+			<md-button class="md-icon-button" ng-click="delete(domains.emailServerId)">
 				<md-tooltip>삭제</md-tooltip>
 				<md-icon>delete</md-icon>
-			</md-btton>
-		</md-card-header>
+			</md-button>
+		</md-card-title>
+		
 		<div>
 			<md-content>
 				<md-list>
