--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/menuGroups/create.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/menuGroups/create.html
@@ -36,9 +36,10 @@
 					<textarea name="description" ng-model="domain.description" md-maxlength="4000" maxlength="4000"></textarea>
 				</md-input-container>
 			</md-card-content>
-			<md-card-actions layout="row">
+			<md-card-actions layout="row" layout-align="end">
+			<md-progress-circular md-mode="indeterminate" ng-show="isProcess"></md-progress-circular>
+				<md-button class="md-raised md-primary" ng-click="create(form, $event)" ng-disabled="isProcess">생성</md-button>
 				<md-button ng-click="goBack()">취소</md-button>
-				<md-button class="md-raised md-primary" type="sumbit" ng-click="create(form, $event)" ng-disabled="isProcess">생성</md-button>
 			</md-card-actions>
 			
 		</md-card>
