사이트 및 메뉴 관리 기능 개발중

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/menuGroups.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/menuGroups.html
@@ -20,7 +20,7 @@
 angular.module('cinnamon')
 .config(function($stateProvider, $urlRouterProvider) {
 	$stateProvider.state('create', {
-		url: '/configuration/menuGroups/create/sites/:siteId',
+		url: '/configuration/menuGroups/create',
 		templateUrl: '/configuration/partials/menuGroups/create',
 		controller: 'configuration.menuGroups.create'
 	}).state('view', {
