--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/sites.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/sites.html
@@ -11,6 +11,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
 <script type="text/javascript" src="/js/configuration/directives/searchList.js"></script>
+<script type="text/javascript" src="/js/configuration/directives/dialogTemplate.js"></script>
 
 <script type="text/javascript" src="/js/configuration/sites/listController.js"></script>
 <script type="text/javascript" src="/js/configuration/sites/viewController.js"></script>
