--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/list.html
@@ -45,7 +45,8 @@
 						<md-icon>account_circle</md-icon>
 					</div>
 					<b flex="30">{{domain.name}}</b>
-					<span flex="30" class="text-muted">{{domain.email}}</span>
+					<b flex="20">{{domain.name}}</b>
+					<span flex="20" class="text-muted">{{domain.email}}</span>
 					<span class="text-muted">{{domain.tel}}</span>
 					<md-divider ng-if="!$last"></md-divider>
 				</md-list-item>
